<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_menu_item_home"
            android:icon="@drawable/ic_launcher_background"
            android:checkable="false"
            android:title="@string/nav_button_1"/>
        <item android:id="@+id/nav_menu_item_edit_tags"
            android:icon="@drawable/ic_launcher_background"
            android:checkable="false"
            android:title="@string/title_edit_tags_page"/>
        <item android:id="@+id/nav_menu_item_downloads"
            android:checkable="false"
            android:title="@string/nav_button_2"/>
        <item android:id="@+id/nav_menu_item_diagram"
            android:checkable="false"
            android:title="@string/nav_button_3"/>
        <item android:id="@+id/nav_menu_item_expert"
            android:checkable="false"
            android:title="@string/nav_button_4"/>
        <item android:id="@+id/nav_menu_item_exit"
            android:checkable="false"
            android:title="@string/nav_button_5"/>
    </group>
</menu>